--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-    "test": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.test.ts'",
-    "test:watch": "mocha -r ts-node/register -r tsconfig-paths/register --watch 'src/**/*.test.ts'",
-    "test:e2e": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.e2e.test.ts'",
-    "test:e2e:watch": "mocha -r ts-node/register -r tsconfig-paths/register --watch 'src/**/*.e2e.test.ts'",
+    "test": "TEST=OK mocha -r ts-node/register ./src/**/*.test.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate dev",
     "prisma:studio": "prisma studio",
     "prisma:test:generate": "prisma generate --schema=./prisma/schema.test.prisma",
     "prisma:test:migrate": "prisma migrate dev --schema=./prisma/schema.test.prisma",
@@ -32,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
@@ -51,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "chai": "^4.3.10",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "supertest": "^7.1.3",
