--- a/package.json
+++ b/package.json
@@ -26,37 +26,40 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "prisma": "^5.7.1",
-    "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.10.4",
-    "typedi": "^0.10.0",
-    "winston": "^3.11.0"
+    "@prisma/client": "5.22.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
+    "cors": "2.8.5",
+    "express": "4.21.2",
+    "express-rate-limit": "7.5.1",
+    "helmet": "7.2.0",
+    "prisma": "5.22.0",
+    "reflect-metadata": "0.1.14",
+    "routing-controllers": "0.10.4",
+    "typedi": "0.10.0",
+    "winston": "3.17.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.5",
-    "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "chai": "^4.3.10",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "^8.56.0",
-    "mocha": "^10.2.0",
-    "supertest": "^7.1.3",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "@types/chai": "4.3.20",
+    "@types/cors": "2.8.19",
+    "@types/express": "4.17.23",
+    "@types/mocha": "10.0.10",
+    "@types/node": "20.19.7",
+    "@types/sinon": "17.0.4",
+    "@types/supertest": "6.0.3",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "axios": "1.10.0",
+    "chai": "4.5.0",
+    "dotenv": "17.2.0",
+    "dotenv-cli": "8.0.0",
+    "eslint": "8.57.1",
+    "mocha": "10.8.2",
+    "sinon": "21.0.0",
+    "supertest": "7.1.3",
+    "ts-node": "10.9.2",
+    "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.8.3"
   }
 }
