--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@faker-js/faker": "9.9.0",
     "@prisma/client": "5.22.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
