--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "financy-manager",
+  "name": "@finance-manager/eslint-config",
   "version": "1.0.0",
   "description": "API de gerenciamento financeiro com Clean Architecture",
   "main": "dist/index.js",
@@ -12,8 +12,6 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:test:generate": "prisma generate --schema=./prisma/schema.test.prisma",
-    "prisma:test:migrate": "prisma migrate dev --schema=./prisma/schema.test.prisma",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -41,6 +39,7 @@
     "winston": "3.17.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.31.0",
     "@types/chai": "4.3.20",
     "@types/cors": "2.8.19",
     "@types/express": "4.17.23",
@@ -48,19 +47,22 @@
     "@types/node": "20.19.7",
     "@types/sinon": "17.0.4",
     "@types/supertest": "6.0.3",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
     "axios": "1.10.0",
     "chai": "4.5.0",
     "dotenv": "17.2.0",
     "dotenv-cli": "8.0.0",
-    "eslint": "8.57.1",
+    "eslint": "9.31.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-prettier": "5.5.1",
+    "globals": "16.3.0",
     "mocha": "10.8.2",
+    "prettier": "3.6.2",
     "sinon": "21.0.0",
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.37.0"
   }
 }
