--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
     "express": "4.21.2",
     "express-rate-limit": "7.5.1",
     "helmet": "7.2.0",
+    "jsonwebtoken": "9.0.2",
     "prisma": "5.22.0",
     "reflect-metadata": "0.1.14",
     "routing-controllers": "0.10.4",
     "typedi": "0.10.0",
-    "winston": "3.17.0"
+    "winston": "3.17.0",
+    "zod": "4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "9.31.0",
     "@types/chai": "4.3.20",
     "@types/cors": "2.8.19",
     "@types/express": "4.17.23",
+    "@types/jsonwebtoken": "9.0.10",
     "@types/mocha": "10.0.10",
     "@types/node": "20.19.7",
     "@types/sinon": "17.0.4",
