--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate dev",
     "prisma:studio": "prisma studio",
     "lint": "eslint 'src/**/*.ts'",
-    "lint:fix": "eslint 'src/**/*.ts' --fix"
+    "lint:fix": "eslint 'src/**/*.ts' --fix",
+    "email:dev": "email dev --dir ./src/domain/services/emails"
   },
   "keywords": [
     "express",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@faker-js/faker": "9.9.0",
     "@prisma/client": "5.22.0",
+    "@react-email/components": "0.4.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cors": "2.8.5",
@@ -34,7 +36,10 @@
     "helmet": "7.2.0",
     "jsonwebtoken": "9.0.2",
     "prisma": "5.22.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "reflect-metadata": "0.1.14",
+    "resend": "4.7.0",
     "routing-controllers": "0.10.4",
     "typedi": "0.10.0",
     "winston": "3.17.0",
@@ -42,12 +47,14 @@
   },
   "devDependencies": {
     "@eslint/js": "9.31.0",
+    "@react-email/preview-server": "4.2.7",
     "@types/chai": "4.3.20",
     "@types/cors": "2.8.19",
     "@types/express": "4.17.23",
     "@types/jsonwebtoken": "9.0.10",
     "@types/mocha": "10.0.10",
     "@types/node": "20.19.7",
+    "@types/react": "19.1.9",
     "@types/sinon": "17.0.4",
     "@types/supertest": "6.0.3",
     "axios": "1.10.0",
@@ -60,6 +67,7 @@
     "globals": "16.3.0",
     "mocha": "10.8.2",
     "prettier": "3.6.2",
+    "react-email": "4.2.7",
     "sinon": "21.0.0",
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
