--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Financial Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc --outDit ./dist",
+    "build": "tsc --outDir ./dist",
     "start": "node -r ./tsconfig-paths-dist.js dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "test": "dotenv -e .env.test mocha -r ts-node/register ./src/**/*.test.ts",
