refactor: fix ts-config path

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --outDir ./dist",
-    "start": "node -r ./tsconfig-paths-dist.js dist/index.js",
+    "start": "node ./tsconfig-paths-dist.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "test": "dotenv -e .env.test mocha -r ts-node/register ./src/**/*.test.ts",
     "prisma:generate": "prisma generate",
