--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Financial Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc --outDir ./dist",
-    "start": "node ./tsconfig-paths-dist.js",
+    "build": "tsc",
+    "start": "node -r ./tsconfig-paths-dist.js dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "test": "dotenv -e .env.test mocha -r ts-node/register ./src/**/*.test.ts",
     "prisma:generate": "prisma generate",
@@ -41,6 +41,7 @@
     "reflect-metadata": "0.1.14",
     "resend": "4.7.0",
     "routing-controllers": "0.10.4",
+    "tsconfig-paths": "4.1.0",
     "typedi": "0.10.0",
     "winston": "3.17.0",
     "zod": "4.0.5"
@@ -72,7 +73,6 @@
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "tsconfig-paths": "4.2.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.37.0"
   }
