--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Financial Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "start": "node -r ./tsconfig-paths-dist.js dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "dev:watch": "ts-node-dev --respawn --transpile-only --watch src -r tsconfig-paths/register src/index.ts",
     "test": "dotenv -e .env.test mocha -r ts-node/register ./src/**/*.test.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -74,6 +75,7 @@
     "mocha": "10.8.2",
     "prettier": "3.6.2",
     "react-email": "4.2.7",
+    "rimraf": "6.0.1",
     "sinon": "21.0.0",
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
